<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/drawer_spell_list_prepared_container"
              android:orientation="vertical"
              android:layout_width="240dp"
              android:layout_gravity="left"
              android:background="@color/midnight_blue"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/refresh"/>
        <TextView
            android:id="@+id/drawer_reset_uses_link"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_reset_uses"/>
    </LinearLayout>

    <LinearLayout
        style="@style/drawer_border"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/remove"/>
        <TextView
            android:id="@+id/drawer_clear_list_link"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_clear_list"/>
    </LinearLayout>

    <LinearLayout
        style="@style/drawer_border"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/inward_arrows"/>
        <TextView
            android:id="@+id/drawer_longclick_prepared_link"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/drawer_longclick"/>
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:text="..."/>

    <include layout="@layout/drawer_main"/>

</LinearLayout>